--- a/style.css
+++ b/style.css
@@ -94,11 +94,22 @@ section p {
     }
 }
 
+footer img {
+    height: 2rem;
+}
+
 footer a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     color: var(--text-color);
     font-size: 2rem;
 
     & :hover {
         color: var(--accent-color);
+
+        stroke: var(--accent-color);
+        fill: var(--accent-color);
     }
 }
