--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,9 @@ import ArticleList from "../components/ArticleList.astro";
             <section id="blog">
                 <h2>articles.txt</h2>
                 <ArticleList limit="3"/>
-                <a class="btn btn-outline-accent w-100 mt-2" href="/blog/">Show all</a>
+                <div class="p-5 text-center">
+                    <a class="btn btn-outline-accent w-100 mt-2" href="/blog/">Show all</a>
+                </div>
             </section>
 		</main>
 		<Footer />
