--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -4,7 +4,6 @@ import {getCollection} from 'astro:content';
 import BaseHead from '../../components/BaseHead.astro';
 import Footer from '../../components/Footer.astro';
 import FormattedDate from '../../components/FormattedDate.astro';
-import Header from '../../components/Header.astro';
 import {SITE_DESCRIPTION, SITE_TITLE} from '../../consts';
 import ArticleList from "../../components/ArticleList.astro";
 import SubPageHeader from "../../components/SubPageHeader.astro";
@@ -13,7 +12,7 @@ import SubPageHeader from "../../components/SubPageHeader.astro";
 <!doctype html>
 <html lang="en">
 <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION}/>
+    <BaseHead title={SITE_TITLE + " - Blog"} description={SITE_DESCRIPTION}/>
 </head>
 <body>
 <SubPageHeader/>
