--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -135,3 +135,15 @@ footer a {
     outline: var(--bg-color) solid 2px;
     outline-offset: -5px;
 }
+
+.w-20 {
+    width: 20%;
+}
+
+.w-15 {
+    width: 15%;
+}
+
+.w-10 {
+    width: 10%;
+}
